--- a/pom.xml
+++ b/pom.xml
@@ -97,5 +97,16 @@
 			<version>1.1</version>
 		</dependency>
 
+<dependency>
+  <groupId>com.sun.faces</groupId>
+  <artifactId>jsf-api</artifactId>
+  <version>2.1.7</version>
+</dependency>
+<dependency>
+  <groupId>com.sun.faces</groupId>
+  <artifactId>jsf-impl</artifactId>
+  <version>2.1.7</version>
+</dependency>
+
 	</dependencies>
 </project>
